Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19956

IntValidator, DoubleValidator, RegExpValidator do not register changes to top/bottom/regExp

XMLWordPrintable

    • 316d02eb438c8268946ef9daa40e6fcd580e4a27

      The attached files show a TextInput with a value greater than the top of the Validator.

      Attempting to change the top/bottom/regExp values has no effect, no error/warning or otherwise. For example, a click on the display attempts intvalidatorelement.top = 35, but the value of top remains at 25.

      Neither of these elements is documented as read-only, and neither have onTop/BottomChanged signals - assumed due to a lack of a NOTIFY in the QIntValidator class top/bottom properties.

        1. doublevalidatorbug.qml
          1 kB
          Damian Jansen (closed Nokia identity)
        2. intvalidatorbug.qml
          1 kB
          Damian Jansen (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            charles Charles Yin (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes